feat: build initial simulation algorithm
